--- a/css-html/exercises/06/index.html
+++ b/css-html/exercises/06/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HTML here -->
+    <div class="box">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eligendi
+      eum fugit iusto nemo nihil officiis placeat quisquam similique suscipit?
+    </div>
   </body>
 </html>
