--- a/css-html/exercises/02/index.html
+++ b/css-html/exercises/02/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HTML here -->
+    <h3 class="text">Hello world!!!</h3>
   </body>
 </html>
