--- a/css-html/exercises/04/index.html
+++ b/css-html/exercises/04/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HTML here -->
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eligendi
+      eum fugit iusto nemo nihil officiis placeat quisquam similique suscipit?
+    </p>
   </body>
 </html>
