--- a/css-html/exercises/05/index.html
+++ b/css-html/exercises/05/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HTML here -->
+    <h2>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eligendi
+      eum fugit iusto nemo nihil officiis placeat quisquam similique suscipit?
+    </h2>
   </body>
 </html>
