--- a/css-html/exercises/08/index.html
+++ b/css-html/exercises/08/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- HTML here -->
+    <div class="container">
+      <div class="box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+        consectetur doloremque pariatur voluptatum esse repellat itaque,
+        recusandae natus dolore accusantium.
+      </div>
+      <div class="box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+        consectetur doloremque pariatur voluptatum esse repellat itaque,
+        recusandae natus dolore accusantium.
+      </div>
+    </div>
   </body>
 </html>
